--- a/topografiya/templates/leader/komeral/checking_komeral_works.html
+++ b/topografiya/templates/leader/komeral/checking_komeral_works.html
@@ -1361,7 +1361,7 @@
             contentType: false,
             processData: false,
             success: function (result){
-                $('#doing_akt_komeral_file').click();
+                $('#doing_program_work_file').click();
                location.replace('/leader_komeral_works');
             },
 
