--- a/topografiya/templates/geodezis/program_works_geodesiz.html
+++ b/topografiya/templates/geodezis/program_works_geodesiz.html
@@ -49,10 +49,9 @@
 
                                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Обект номи:</b> {{ object.object.pdowork.object_name}}</div>
-                                                                            <div><b>Келишув санаси:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
@@ -87,10 +86,9 @@
 
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Обект номи:</b> {{ object.object.pdowork.object_name}}</div>
-                                                            <div><b>Келишув санаси:</b> {{ object.object.pdowork.agreement_date}}</div>
-                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>
-                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                           <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                              <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
                 <b  class="count" data-all="{% for work in rejecteds %}{% if work.programowork.object.id == object.object.id %} {{ work.programowork.object.id }},{% endif %}{% endfor %}"></b>
@@ -138,9 +136,9 @@
                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">30</span> Январ 2022</div>
                                                         <h5>Обйект ҳақида маълумот</h5>
                                                         <div class="blog-bottom-content">
-                                                            <div><b>Келиб тушган вақти:</b> 10/01/2022</div>
-                                                            <div><b>Муддати</b> 10/01/2022</div>
-                                                            <div><b>Жойлашган жойи:</b> Тошкент, Янги ҳаёт туман,</div>
+                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                         </div>
                                                         <hr>
                                                         <div class="detail-footer">
@@ -177,10 +175,9 @@
                                                                         <div class="blog-date"><span style="color: #168eea;font-size: 40px;">{{ object.object.pdowork.work_term }}</span> Kun</div>
                                                                         <h5>{{ object.pdowork.object_name}}</h5>
                                                                         <div class="blog-bottom-content">
-                                                                            <div><b>Обект номи:</b> {{ object.object.pdowork.object_name}}</div>
-                                                                            <div><b>Келиб тушган вақти:</b> {{ object.object.pdowork.agreement_date}}</div>
-{#                                                                            <div><b>Муддати</b> {{ object.object.pdowork.work_term}}</div>#}
-                                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
+                                                                            <div><b>Буюртмачи номи:</b> {{ object.object.pdowork.customer }}</div>
+                                                            <div><b>Шартнома тузилган сана:</b> {{ object.object.pdowork.agreement_date }}</div>
+                                                            <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address }}</div>
                                                                         </div>
                                                                         <hr>
                                                                         <div class="detail-footer">
