--- a/topografiya/templates/index.html
+++ b/topografiya/templates/index.html
@@ -40,8 +40,7 @@
 
 
                                 <div class="fc-day-event one" id="one">
-
-                                            <span class="count"></span>
+                                    <span class="count"></span>
                                             <div class="modal fade bd-example-modal-lg" tabindex="-1" style="display: none;" aria-hidden="true">
                                                 <div class="modal-dialog modal-lg">
                                                     <div class="modal-content">
@@ -184,13 +183,31 @@
         for(let i=0; i < elements.length; i++){
             dates.push(elements[i].innerHTML);
             var a = dates[i].split('/').reverse();
-            var b = a[0].toString()+'-'+a[1].toString()+'-'+(parseInt(a[2])+parseInt(terms[i].innerHTML)).toString();
-            document.getElementsByClassName("one")[i].setAttribute("data-time", b);
+            var b = a[0].toString()+'-'+a[1].toString()+'-'+a[2].toString();
+            const d = new Date(b);
+            d.setDate(d.getDate() + parseInt(terms[i].innerHTML));
+            t=d.toISOString().substring(0, 10);
+
+            document.getElementsByClassName("one")[i].setAttribute("data-time", t);
             document.getElementsByClassName("count")[i].innerHTML=1;
         }
 
 
     </script>
+
+{#<script>#}
+{##}
+{#    const d = new Date('2022-02-28');#}
+{##}
+{#    d.setDate(d.getDate() + 5);#}
+{#    d.setMonth(d.getMonth() + 1);#}
+{##}
+{#    d.setFullYear(d.getFullYear() + 1);#}
+{##}
+{#    t=d.toISOString().substring(0, 10);#}
+{#    document.getElementById("demo").innerHTML = t#}
+{##}
+{#</script>#}
 
     <script>
     document.addEventListener('DOMContentLoaded', function () {
