--- a/topografiya/templates/leader/komeral/rejected_komeral_works.html
+++ b/topografiya/templates/leader/komeral/rejected_komeral_works.html
@@ -1205,7 +1205,7 @@
             processData: false,
 
             success: function (result){
-                window.open('/static/files/program-work/program_work_file.pdf','_blank');
+                 window.open('/static/files/'+result,'_blank');
 {#                var link = document.createElement('a');#}
 {#                link.href = "/static/files/file.pdf";#}
 {#                link.download = "file_" + new Date() + ".pdf";#}
