--- a/topografiya/templates/leader/program_works/kerak.html
+++ b/topografiya/templates/leader/program_works/kerak.html
@@ -347,7 +347,7 @@
                                                <hr>
                                               <input type="text" value="{{ object.object.id }}" name="object_id" style="display:none;">
 {#                                               <button type="button" id="sent_to_check_programwork" class="float-end btn btn-primary ">Текширувга юбориш</button>#}
-                                               <button type="submit" id="program_work_form_store" class="float-left btn btn-outline-warning m-r-5"> Сақлаш</button>
+                                               <button type="button" id="program_work_form_store" class="float-left btn btn-outline-warning m-r-5"> Сақлаш</button>
                                                      </form>
                                               {% else %}
 
