--- a/topografiya/templates/leader/program_works/program_work_form_edit.html
+++ b/topografiya/templates/leader/program_works/program_work_form_edit.html
@@ -219,19 +219,38 @@
                                                                </thead>
                                                                <tbody>
 
-                                                               <tr>
-                                                                   <td><b>1</b></td>
-                                                                   <td><input class="border-0 w-100" type="text" name="a7_1_1" value="{{ formtable1.a7_1_1 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" type="text" name="a7_1_2" value="{{ formtable1.a7_1_2 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" type="text" name="a7_1_3" value="{{ formtable1.a7_1_3 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" type="text" name="a7_1_4" value="{{ formtable1.a7_1_4 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" type="text" name="a7_1_5" value="{{ formtable1.a7_1_5 }}" placeholder=""></td>
+                                                               {% if formtable1 %}
+                                                                   {% for work_table1_1 in formtable1 %}
+                                                                       <tr data-obj = {{ work_table1_1.id }} del=0>
+                                                                   <td>#</td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_1" name="a7_1_1" data-column="a7_1_1" value="{{ work_table1_1.a7_1_1 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_2" name="a7_1_2" data-column="a7_1_2" value="{{ work_table1_1.a7_1_2 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_3" name="a7_1_3" data-column="a7_1_3" value="{{ work_table1_1.a7_1_3 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_4" name="a7_1_4" data-column="a7_1_4" value="{{ work_table1_1.a7_1_4 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_5" name="a7_1_5" data-column="a7_1_5" value="{{ work_table1_1.a7_1_5 }}" placeholder=""></td>
                                                                    <td>
                                                                        <i id="addrow2" onclick="childrenRow_pr()"
                                                                           class="fa fa-plus-circle f-20 txt-primary" aria-hidden="true"></i>
                                                                    </td>
-                                                               </tr>
+                                                                   <td><i class="fa fa-close f-20 txt-danger del-row"></i></td>
+                                                              </tr>
+                                                                                {% endfor %}
+                                                               {% else %}
+                                                                   <tr data-obj = '-1'>
 
+                                                                   <td>#</td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_1" name="a7_1_1" data-column="a7_1_1" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_2" name="a7_1_2" data-column="a7_1_2" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_3" name="a7_1_3" data-column="a7_1_3" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_4" name="a7_1_4" data-column="a7_1_4" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" type="text" id="a7_1_5" name="a7_1_5" data-column="a7_1_5" placeholder=""></td>
+                                                                   <td>
+                                                                       <i id="addrow2" onclick="childrenRow_pr()"
+                                                                          class="fa fa-plus-circle f-20 txt-primary" aria-hidden="true"></i>
+                                                                   </td>
+                                                                   <td><i class="fa fa-close f-20 txt-danger del-row"></i></td>
+                                                               </tr>
+                                                                   {% endif %}
                                                                </tbody>
                                                            </table>
 
@@ -293,22 +312,43 @@
                                                                    <th scope="col"></th>
                                                                </tr>
                                                                </thead>
-                                                               <tbody>
-                                                               <tr>
-                                                                   <td><b>1</b></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_1" value="{{ formtable2.a9_2_1 }}" type="text" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_2" type="text" value="{{ formtable2.a9_2_2 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_3" type="text" value="{{ formtable2.a9_2_3 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_4" type="text" value="{{ formtable2.a9_2_4 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_5" type="text" value="{{ formtable2.a9_2_5 }}" placeholder=""></td>
-                                                                   <td><input class="border-0 w-100" name="a9_2_6" type="text" value="{{ formtable2.a9_2_6 }}" placeholder=""></td>
+                                                                <tbody>
+                                                               {% if formtable2 %}
+                                                                                {% for formtable1_2 in formtable2 %}
+                                                                                    <tr data-obj = {{ formtable1_2.id }} del=0>
+                                                                   <td>#</td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_1" data-column="a9_2_1" id="a9_2_1" value="{{ formtable1_2.a9_2_1 }}" type="text" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_2" data-column="a9_2_2" id="a9_2_2" type="text" value="{{ formtable1_2.a9_2_2 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_3" data-column="a9_2_3" id="a9_2_3" type="text" value="{{ formtable1_2.a9_2_3 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_4" data-column="a9_2_4" id="a9_2_4" type="text" value="{{ formtable1_2.a9_2_4 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_5" data-column="a9_2_5" id="a9_2_5" type="text" value="{{ formtable1_2.a9_2_5 }}" placeholder=""></td>
+                                                                   <td><input class="border-0 w-100" name="a9_2_6" data-column="a9_2_6" id="a9_2_6" type="text" value="{{ formtable1_2.a9_2_6 }}" placeholder=""></td>
                                                                    <td>
                                                                         <i id="addrow4" onclick="childrenRow_pr2()"
                                                                            class="fa fa-plus-circle f-20 txt-primary" aria-hidden="true"></i>
                                                                    </td>
+                                                                   <td><i class="fa fa-close f-20 txt-danger del-row"></i></td>
                                                                </tr>
+                                                                   {% endfor %}
+                                                               {% else %}
+                                                                    <tr data-obj = '-1'>
+                                                                       <td>#</td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_1" id="a9_2_1" type="text" data-column="a9_2_1"></td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_2" id="a9_2_2" type="text" data-column="a9_2_2"></td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_3" id="a9_2_3" type="text" data-column="a9_2_3"></td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_4" id="a9_2_4" type="text" data-column="a9_2_4"></td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_5" id="a9_2_5" type="text" data-column="a9_2_5"></td>
+                                                                       <td><input class="border-0 w-100" name="a9_2_6" id="a9_2_6" type="text" data-column="a9_2_6"></td>
+                                                                       <td>
+                                                                            <i id="addrow4" onclick="childrenRow_pr2()"
+                                                                               class="fa fa-plus-circle f-20 txt-primary" aria-hidden="true"></i>
+                                                                       </td>
+                                                                   <td><i class="fa fa-close f-20 txt-danger del-row"></i></td>
+                                                               </tr>
+                                                                    {% endif %}
 
                                                                </tbody>
+
                                                            </table>
 
                                                        </div>
@@ -413,9 +453,9 @@
                                               <div class="m-b-20 m-t-20 row">
                                                    <label class="col-sm-3 col-form-label">Программу составил</label>
                                                    <div class="col-sm-9">
-                                                       <input class="form-control" name="program_work_creator" type="text" value="{{ form.program_work_creator }}">
+                                                       <input class="form-control" name="program_work_creator" id="program_work_creator" type="text" value="{{ form.program_work_creator }}">
                                                    </div>
-                                               </div>
+                                              </div>
 
 {#                                               {% if form.programwork.status == 2 %}#}
 {#                                                    <input type="text" value="{{ object.id }}" name="object_id" style="display:none;">#}
